[package]
name = "arbiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
coap = "0.18.0"
coap-lite = "0.11.3"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.38.0"
uuid = { version = "1.8.0", features = ["serde"] }
