[package]
name = "arbiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
coap = { version = "0.18.0", features = ["dtls"] }
coap-lite = "0.11.3"
rcgen = "0.11.1"
ring = "0.16.20"
rustls = "0.21.7"
rustls-pemfile = "2.0.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.38.0"
uuid = { version = "1.8.0", features = ["serde"] }
webrtc-dtls = "0.8.0"
webrtc-util = "0.8.0"
