[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap = "0.17.0"
coap-lite = "0.12.0"
rustls = "0.21.7"
rustls-pemfile = "2.0.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.38.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
webrtc-dtls = "0.8.0"
