[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
coap = "0.18.0"
coap-lite = "0.11.3"
env_logger = "0.11.3"
log = { version = "0.4.22", features = ["serde"] }
rcgen = "0.11.1"
regex = "1.10.5"
rustls = "0.21.7"
rustls-pemfile = "2.0.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.38.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
webrtc-dtls = "0.8.0"
