[package]
name = "device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = { version = "0.4.22", features = ["serde"] }
serde = "1.0.204"
serde_json = "1.0.120"
tokio = "1.38.0"
uuid = { version = "1.10.0", features = ["serde"] }
coap = "0.17.0"
coap-lite = "0.11.3"
rcgen = "0.11.1"
rustls = "0.21.7"
rustls-pemfile = "2.0.0"
webrtc-dtls = "0.8.0"
webrtc-util = "0.8.0"
jsonwebtoken = "9.3.0"
anyhow = "1.0.86"
